fixed megamenu on safari

--- a/src/styles/components/mega-menu.less
+++ b/src/styles/components/mega-menu.less
@@ -101,8 +101,6 @@ div[mega-menu]{
             height: 20px;
             line-height: 20px;
             padding-left: 11px;
-            //cursor: default;
-            //pointer-events: none;
           }
 
           ul{
@@ -212,14 +210,7 @@ div[mega-menu]{
       -webkit-column-fill: auto;
       column-fill: auto;
 
-      //display: -webkit-flex;
-      //display: flex;
-      //-webkit-flex-flow: column wrap;
-      //flex-flow: column wrap;
-
       > li{
-        //height: 20px;
-        //padding: 10px;
         > a{
           font-size: 7px !important;
           font-weight: 600;
@@ -234,18 +225,13 @@ div[mega-menu]{
         }
 
         ul{
-          //height: 297px;
-          //display: -webkit-flex;
-          //display: flex;
-          //-webkit-flex-flow: column wrap;
-          //flex-flow: column wrap;
           li{
             height: 24px;
             line-height: 20px;
             //width: 200px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            //white-space: nowrap;
+            //overflow: hidden;
+            //text-overflow: ellipsis;
 
             a{
               position: relative;
